--- a/index.html
+++ b/index.html
@@ -5,20 +5,33 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Kwiaciarnia Lawenda</title>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,900&amp;subset=latin-ext" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<nav>			
-			<ul>
-				<li><a href='#' class="logo"><img src="images/1b.jpg"></a></li>
-				<li><a href="#" class="btn-1">strona główna</a></li>
-				<li><a href="#" class="btn-2">oferta</a></li>
-				<li><a href="#" class="btn-3">galeria</a></li>
-				<li><a href="#" class="btn-4">kontakt</a></li>
-			</ul>
-		</nav>
-		<header></header>	
-		
+		<section class="navigation">
+			<div class="minilogo">
+				<a href='#'><img src="images/1a.jpg"></a>
+			</div>
+			<div class="burger">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+			<nav>
+				<ul>
+					<li><a href='#' class="logo"><img src="images/1b.jpg"></a></li>
+					<li><a href="#" class="btn-1">strona główna</a></li>
+					<li><a href="#" class="btn-2">oferta</a></li>
+					<li><a href="#" class="btn-3">galeria</a></li>
+					<li><a href="#" class="btn-4">kontakt</a></li>
+				</ul>
+			</nav>
+		</section>
+		<header class="banner">
+			
+		</header>
+		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
