--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
 				</ul>
 			</nav>
 		</section>
-
+		<!-- <header class="banner">
+			<div class="arrow">
+				<i class="fas fa-angle-left arrow-left"></i>
+			</div>
+			<img src="../images/banner/banner1.jpg" alt="bukiety okolicznościowe">			
+			<div class="banner-text">bukiety okolicznościowe</div>
+			<div class="arrow">
+				<i class="fas fa-angle-right arrow-right"></i>
+			</div>
+		</header> -->
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
