--- a/index.html
+++ b/index.html
@@ -30,16 +30,23 @@
 				</ul>
 			</nav>
 		</section>
-		<!-- <header class="banner">
-			<div class="arrow">
-				<i class="fas fa-angle-left arrow-left"></i>
+		<header class="banner">
+			<div class="arrow arrow-left">
+				<i class="fas fa-angle-left"></i>
 			</div>
-			<img src="../images/banner/banner1.jpg" alt="bukiety okolicznościowe">			
-			<div class="banner-text">bukiety okolicznościowe</div>
-			<div class="arrow">
-				<i class="fas fa-angle-right arrow-right"></i>
+
+			<div class="banner-image"> </div>	
+			<div class="banner-text">
+				<h1>bukiety okolicznościowe</h1>
+			</div>		
+			
+			<div class="arrow arrow-right">
+				<i class="fas fa-angle-right"></i>
 			</div>
-		</header> -->
+		</header>
+		<section>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor corporis recusandae dicta voluptatibus adipisci quos cumque nihil quas perspiciatis nulla porro nisi nobis consequatur magni voluptate tempora repudiandae, commodi asperiores fuga et. Itaque delectus ducimus doloremque veritatis repellendus eum vitae modi. Nostrum, totam necessitatibus consectetur quasi repudiandae suscipit sequi est alias, officiis quo ex. Itaque magnam, veritatis possimus neque asperiores facilis reiciendis expedita soluta rerum qui odit tempore laboriosam maxime, culpa non laborum ab accusamus, unde aperiam blanditiis sequi deleniti. Error quis impedit sequi praesentium natus iure ab minus blanditiis corporis numquam ipsum corrupti hic amet, debitis possimus? Quos.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem vitae reprehenderit eius reiciendis dolores aspernatur ut error voluptatibus illo, magni quae exercitationem, minima earum alias ea, beatae at, adipisci maxime. Enim ullam, harum saepe consectetur. Odio ipsa, rem corporis minus dolor soluta praesentium. Esse qui atque iure id possimus laboriosam eligendi sequi accusamus voluptas expedita, sed consectetur molestias cupiditate non explicabo incidunt, officia! Recusandae iure itaque minus possimus nam ipsum neque hic consectetur. Cum impedit veritatis deleniti illo enim non voluptatem sed a quibusdam omnis, natus esse quod perspiciatis, officia obcaecati voluptates eum sequi quas totam odit repellat perferendis est corporis. Ipsam exercitationem vero temporibus? Neque minima quaerat necessitatibus maxime molestias, qui deleniti consequuntur, voluptatibus quae itaque porro optio, consectetur! Asperiores, facilis explicabo ducimus error corporis aspernatur architecto! Id culpa, dignissimos porro. Accusantium veritatis debitis excepturi qui iste facere dolorem, corrupti neque aliquam itaque, praesentium ab exercitationem dicta, explicabo eius recusandae repellat eveniet ducimus. Expedita, excepturi. Pariatur illum, aliquam rem nihil eum nobis praesentium ducimus veniam numquam. Molestias deserunt quia veritatis, eveniet voluptate et hic, laborum iste minima fugiat neque. Culpa corporis quae nobis totam, animi deserunt quidem esse dolorem vitae rerum officia ipsam minima reprehenderit excepturi ad pariatur sint!</p>
+		</section>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
