--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 				<i class="fas fa-angle-left"></i>
 			</div>
 
-			<div class="banner-image"> </div>	
+			<div class="banner-image">
+				<img src="../images/banner/1.jpg">
+			</div>	
 			<div class="banner-text">
 				<h1>bukiety okolicznościowe</h1>
 			</div>		
