add rwd to banner

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href='#' class="logo"><img src="images/1b.jpg"></a></li>
+					<li><a href='#' class="logo"><img src="images/1c.jpg"></a></li>
 					<li><a href="#" class="btn-1">strona główna</a></li>
 					<li><a href="#" class="btn-2">oferta</a></li>
 					<li><a href="#" class="btn-3">galeria</a></li>
