--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<i class="fas fa-angle-left"></i>
 			</div>
 			<div class="banner-image">
-				<img src="../images/banner/1.jpg">
+				<img src="images/banner/1.jpg">
 			</div>	
 			<div class="banner-text">
 				<h1>bukiety okolicznościowe</h1>
