add header & rwd to header

--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Kwiaciarnia Lawenda</title>
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:400,900&amp;subset=latin-ext" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Charmonman|Roboto:400,700&amp;subset=latin-ext" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<section class="navigation">
 			<div class="minilogo">
-				<a href='#'><img src="images/1a.jpg"></a>
+				<a href='#'><img src="images/1a.jpg" alt="Kwiaciarnia lawenda"></a>
 			</div>
 			<div class="burger">
 				<span></span>
@@ -22,7 +21,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href='#' class="logo"><img src="images/1c.jpg"></a></li>
+					<li><a href='#' class="logo"><img src="images/1c.jpg" alt="kwiaciarnia lawenda"></a></li>
 					<li><a href="#" class="btn-1">strona główna</a></li>
 					<li><a href="#" class="btn-2">oferta</a></li>
 					<li><a href="#" class="btn-3">galeria</a></li>
@@ -30,22 +29,35 @@
 				</ul>
 			</nav>
 		</section>
-		<header class="banner">
+		<header>
+			<section class="welcome">
+				<div class="welcome-wrap">
+					<h1>kwiaciarnia</h1>
+					<h1>lawenda</h1>
+					<h2>niezwykłe kompozycje na każdą okazję!</h2>
+					<p>zapraszamy!</p>
+					<button class="arrow-down">
+						<i class="fas fa-angle-down"></i>
+					</button>
+				</div>
+			</section>
+		</header>
+		<section class="banner">
 			<div class="arrow arrow-left">
 				<i class="fas fa-angle-left"></i>
 			</div>
 			<div class="banner-image">
-				<img src="images/banner/1.jpg">
-			</div>	
+				<img src="images/banner/1.jpg" alt="bukiety okolicznościowe">
+			</div>
 			<div class="banner-text">
 				<h1>bukiety okolicznościowe</h1>
-			</div>			
+			</div>
 			<div class="arrow arrow-right">
 				<i class="fas fa-angle-right"></i>
 			</div>
-		</header>
+		</section>
 		<section>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit dolor corporis recusandae dicta voluptatibus adipisci quos cumque nihil quas perspiciatis nulla porro nisi nobis consequatur magni voluptate tempora repudiandae, commodi asperiores fuga et. Itaque delectus ducimus doloremque veritatis repellendus eum vitae modi. Nostrum, totam necessitatibus consectetur quasi repudiandae suscipit sequi est alias, officiis quo ex. Itaque magnam, veritatis possimus neque asperiores facilis reiciendis expedita soluta rerum qui odit tempore laboriosam maxime, culpa non laborum ab accusamus, unde aperiam blanditiis sequi deleniti. Error quis impedit sequi praesentium natus iure ab minus blanditiis corporis numquam ipsum corrupti hic amet, debitis possimus? Quos.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem vitae reprehenderit eius reiciendis dolores aspernatur ut error voluptatibus illo, magni quae exercitationem, minima earum alias ea, beatae at, adipisci maxime. Enim ullam, harum saepe consectetur. Odio ipsa, rem corporis minus dolor soluta praesentium. Esse qui atque iure id possimus laboriosam eligendi sequi accusamus voluptas expedita, sed consectetur molestias cupiditate non explicabo incidunt, officia! Recusandae iure itaque minus possimus nam ipsum neque hic consectetur. Cum impedit veritatis deleniti illo enim non voluptatem sed a quibusdam omnis, natus esse quod perspiciatis, officia obcaecati voluptates eum sequi quas totam odit repellat perferendis est corporis. Ipsam exercitationem vero temporibus? Neque minima quaerat necessitatibus maxime molestias, qui deleniti consequuntur, voluptatibus quae itaque porro optio, consectetur! Asperiores, facilis explicabo ducimus error corporis aspernatur architecto! Id culpa, dignissimos porro. Accusantium veritatis debitis excepturi qui iste facere dolorem, corrupti neque aliquam itaque, praesentium ab exercitationem dicta, explicabo eius recusandae repellat eveniet ducimus. Expedita, excepturi. Pariatur illum, aliquam rem nihil eum nobis praesentium ducimus veniam numquam. Molestias deserunt quia veritatis, eveniet voluptate et hic, laborum iste minima fugiat neque. Culpa corporis quae nobis totam, animi deserunt quidem esse dolorem vitae rerum officia ipsam minima reprehenderit excepturi ad pariatur sint!</p>
+			
 		</section>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
