add smaller image to banner

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 			<div class="banner-image">
 				<img src="images/banner/1.jpg" alt="bukiety okolicznościowe">
 			</div>
+			<div class="banner-image-mini">
+				<img src="images/banner/1mini.jpg" alt="bukiety okolicznościowe">
+			</div>
 			<div class="banner-text">
 				<h1>bukiety okolicznościowe</h1>
 			</div>
