--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	</head>
 	<body>
 		<section class="navigation">
-			<div class="minilogo">
+			<!-- <div class="minilogo">
 				<a href='#'><img src="images/1a.jpg" alt="Kwiaciarnia lawenda"></a>
-			</div>
+			</div> -->
 			<div class="burger">
 				<span></span>
 				<span></span>
