--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
 				<i class="fas fa-angle-right"></i>
 			</div>
 		</section>
-		<section>
-			
+		<section class="gallery">			
 		</section>
+		<footer>
+			<p>Copyright © 2018 Anna Ambroziak</p>
+		</footer>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
