--- a/index.html
+++ b/index.html
@@ -61,6 +61,33 @@
 		</section>
 		<section class="gallery">			
 		</section>
+		<section class="contact">
+			<div class="information">
+				<h1>Skontaktuj się z nami!</h1>
+				<div class="adress info">
+					<div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
+					<div class="text">
+						<p class="title">Nasz adres</p>
+						<p>Kwiaciarnia Lawenda <br>ul.St.Batorego 34 lok.5 <br>Hajnówka</p>
+					</div>						
+				</div>
+				<div class="phone info">
+					<div class="contact-icon"><i class="fas fa-phone-square"></i></div>
+					<div class="text">
+						<p class="title">Telefon</p>
+						<p>795 236 776</p>
+					</div>
+				</div>
+				<div class="open info">
+					<div class="contact-icon"><i class="fas fa-clock"></i></div>
+					<div class="text">
+						<p class="title">Godziny otwarcia</p>
+						<p>Poniedziałek-Piątek: 8.00 - 17:00 <br>Sobota: 8:00 - 16:00 <br> Niedziela 8:00 - 13:00 </p>
+					</div>
+				</div>
+			</div>
+			<div class="map"></div>
+		</section>
 		<footer>
 			<p>Copyright © 2018 Anna Ambroziak</p>
 		</footer>
