add rwd to contact section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<section class="navigation">
 			<!-- <div class="minilogo">
-				<a href='#'><img src="images/1a.jpg" alt="Kwiaciarnia lawenda"></a>
+					<a href='#'><img src="images/1a.jpg" alt="Kwiaciarnia lawenda"></a>
 			</div> -->
 			<div class="burger">
 				<span></span>
@@ -37,7 +37,7 @@
 					<h2>niezwykłe kompozycje na każdą okazję!</h2>
 					<p>zapraszamy!</p>
 					<button class="arrow-down">
-						<i class="fas fa-angle-down"></i>
+					<i class="fas fa-angle-down"></i>
 					</button>
 				</div>
 			</section>
@@ -59,30 +59,32 @@
 				<i class="fas fa-angle-right"></i>
 			</div>
 		</section>
-		<section class="gallery">			
+		<section class="gallery">
 		</section>
 		<section class="contact">
 			<div class="information">
-				<h1>Skontaktuj się z nami!</h1>
-				<div class="adress info">
-					<div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-					<div class="text">
-						<p class="title">Nasz adres</p>
-						<p>Kwiaciarnia Lawenda <br>ul.St.Batorego 34 lok.5 <br>Hajnówka</p>
-					</div>						
-				</div>
-				<div class="phone info">
-					<div class="contact-icon"><i class="fas fa-phone-square"></i></div>
-					<div class="text">
-						<p class="title">Telefon</p>
-						<p>795 236 776</p>
+				<div class="wrap">
+					<h1>Skontaktuj się z nami!</h1>
+					<div class="adress info">
+						<div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
+						<div class="text">
+							<p class="title">Nasz adres</p>
+							<p>Kwiaciarnia Lawenda <br>ul.St.Batorego 34 lok.5 <br>Hajnówka</p>
+						</div>
 					</div>
-				</div>
-				<div class="open info">
-					<div class="contact-icon"><i class="fas fa-clock"></i></div>
-					<div class="text">
-						<p class="title">Godziny otwarcia</p>
-						<p>Poniedziałek-Piątek: 8.00 - 17:00 <br>Sobota: 8:00 - 16:00 <br> Niedziela 8:00 - 13:00 </p>
+					<div class="phone info">
+						<div class="contact-icon"><i class="fas fa-phone-square"></i></div>
+						<div class="text">
+							<p class="title">Telefon</p>
+							<p>795 236 776</p>
+						</div>
+					</div>
+					<div class="open info">
+						<div class="contact-icon"><i class="fas fa-clock"></i></div>
+						<div class="text">
+							<p class="title">Godziny otwarcia</p>
+							<p>Poniedziałek-Piątek: 8.00 - 17:00 <br>Sobota: 8:00 - 16:00 <br> Niedziela 8:00 - 13:00 </p>
+						</div>
 					</div>
 				</div>
 			</div>
