reduce size some elements & fix nav

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<section class="navigation">
-			<!-- <div class="minilogo">
-					<a href='#'><img src="images/1a.jpg" alt="Kwiaciarnia lawenda"></a>
-			</div> -->
+		<section class="navigation">			
 			<div class="burger">
 				<span></span>
 				<span></span>
@@ -21,7 +18,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href='#' class="logo"><img src="images/1c.jpg" alt="kwiaciarnia lawenda"></a></li>
+					<li><a href='#' class="logo"><img src="images/1a.jpg" alt="kwiaciarnia lawenda"></a></li>
 					<li><a href="#" class="btn-1">strona główna</a></li>
 					<li><a href="#" class="btn-2">oferta</a></li>
 					<li><a href="#" class="btn-3">galeria</a></li>
@@ -88,11 +85,16 @@
 					</div>
 				</div>
 			</div>
-			<div class="map"></div>
+			<div class="map">
+				<div id="map"></div>
+			</div>
 		</section>
 		<footer>
 			<p>Copyright © 2018 Anna Ambroziak</p>
 		</footer>
+<!-- 		<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AAIzaSyB1TXvEzmiLbNd7gP2tcJqhUfWInuVkGK8&callback=initMap"> -->
+		</script>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
