--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Kwiaciarnia Lawenda</title>
-		<link href="https://fonts.googleapis.com/css?family=Charmonman|Roboto:400,700&amp;subset=latin-ext" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=La+Belle+Aurore|Roboto:400,700&amp;subset=latin-ext" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
@@ -18,7 +18,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href='#' class="logo"><img src="images/1a.jpg" alt="kwiaciarnia lawenda"></a></li>
+					<li><a href='#' class="logo"><img src="images/logo.png" alt="kwiaciarnia lawenda"></a></li>
 					<li><a href="#" class="btn-1">strona główna</a></li>
 					<li><a href="#" class="btn-2">oferta</a></li>
 					<li><a href="#" class="btn-3">galeria</a></li>
