add about-us section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 				</div>
 			</section>
 		</header>
+		<section class="about-us">
+			<div class="text">
+				<h1>Kwiaty to nasza pasja!</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate adipisci, dolor, deserunt nostrum molestias facilis nulla excepturi! Magnam veniam, numquam.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro nobis, quia quam. Quia ad voluptatum incidunt quibusdam illum iure, vitae, ratione eos aperiam fugit similique delectus soluta aliquam quae? Eveniet sequi aspernatur repellendus, adipisci, minus assumenda veritatis iste earum reprehenderit.
+				</p>
+			</div>			
+			<img src="images/9a.jpg" alt="">			
+		</section>
 		<section class="banner">
 			<div class="arrow arrow-left">
 				<i class="fas fa-angle-left"></i>
