add rwd to about-us

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro nobis, quia quam. Quia ad voluptatum incidunt quibusdam illum iure, vitae, ratione eos aperiam fugit similique delectus soluta aliquam quae? Eveniet sequi aspernatur repellendus, adipisci, minus assumenda veritatis iste earum reprehenderit.
 				</p>
 			</div>			
-			<img src="images/9a.jpg" alt="">			
+			<div class="image"></div>			
 		</section>
 		<section class="banner">
 			<div class="arrow arrow-left">
