add gallery section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,73 @@
 			</div>
 		</section>
 		<section class="gallery">
+			<h1>Galeria naszych prac</h1>
+			<div class="album">
+				<div>
+					<!-- <img src="" alt=""> -->
+					<a href="#"><img src="images/gallery/1.jpg"></a>
+					<div class="caption">
+						<p>kompozycje kwiatowe</p>
+						<button>Zobacz więcej</button>
+					</div>
+				</div>
+				<div>
+					<img src="" alt="">								
+					<a href="#"><img src="images/gallery/2.jpg"></a>
+					<div class="caption">
+						<p>dekoracje weselne</p>
+						<button>Zobacz więcej</button>
+					</div>
+				</div>
+				<div>
+					<img src="" alt="">
+					<a href="#"><img src="images/gallery/3.jpg"></a>
+					<div class="caption">
+						<p>dekoracja aut</p>
+						<button>Zobacz więcej</button>
+					</div>
+				</div>
+				<div>
+					<img src="" alt="">
+					<a href="#"><img src="images/gallery/4.jpg"></a>
+					<div class="caption">
+						<p>wianki</p>
+						<button>Zobacz więcej</button>
+					</div>
+				</div>
+				<div>
+					<img src="" alt="">
+					<a href="#"><img src="images/gallery/5.jpg"></a>
+					<div class="caption">
+						<p>dekoracje świąteczne</p>
+						<button>Zobacz więcej</button>
+					</div>
+				</div>
+				<div>
+					<img src="" alt="">
+					<a href="#"><img src="images/gallery/6.jpg"></a>
+					<div class="caption">
+						<p>słodkośći</p>
+						<button>Zobacz więcej</button>
+					</div>
+				</div>
+				<div>
+					<img src="" alt="">
+					<a href="#"><img src="images/gallery/7.jpg"></a>
+					<div class="caption">
+						<p>pakowanie prezentów</p>
+						<button>Zobacz więcej</button>
+					</div>
+				</div>
+				<div>
+					<img src="" alt="">
+					<a href="#"><img src="images/gallery/8.jpg"></a>
+					<div class="caption">
+						<p>wieńce pogrzebowe</p>
+						<button>Zobacz więcej</button>
+					</div>
+				</div>
+			</div>
 		</section>
 		<section class="contact">
 			<div class="information">
