add little changes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href='#' class="logo"><img src="images/logo.png" alt="kwiaciarnia lawenda"></a></li>
-					<li><a href="#" class="btn-1">strona główna</a></li>
+					<li class="logo"><a href='#'><img src="images/logo.png" alt="kwiaciarnia lawenda"></a></li>
+					<li><a href="#" class="btn-1">home</a></li>
 					<li><a href="#" class="btn-2">oferta</a></li>
 					<li><a href="#" class="btn-3">galeria</a></li>
 					<li><a href="#" class="btn-4">kontakt</a></li>
@@ -142,14 +142,14 @@
 						<div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
 						<div class="text">
 							<p class="title">Nasz adres</p>
-							<p>Kwiaciarnia Lawenda <br>ul.St.Batorego 34 lok.5 <br>Hajnówka</p>
+							<p>Kwiaciarnia Lawenda <br>ul.Lawendowa 1/1 <br>00 - 000 Lawenda</p>
 						</div>
 					</div>
 					<div class="phone info">
 						<div class="contact-icon"><i class="fas fa-phone-square"></i></div>
 						<div class="text">
 							<p class="title">Telefon</p>
-							<p>795 236 776</p>
+							<p>123 123 456</p>
 						</div>
 					</div>
 					<div class="open info">
