--- a/index.html
+++ b/index.html
@@ -168,9 +168,7 @@
 		<footer>
 			<p>Copyright © 2018 Anna Ambroziak</p>
 		</footer>
-<!-- 		<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AAIzaSyB1TXvEzmiLbNd7gP2tcJqhUfWInuVkGK8&callback=initMap"> -->
-		</script>
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZOytnsAe0CMjJyQHkTPL4-XmxheZHHCQ&callback=initMap"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
