delete arrow-down & add changes to nav

--- a/index.html
+++ b/index.html
@@ -27,15 +27,12 @@
 			</nav>
 		</section>
 		<header>
-			<section class="welcome">
+			<section class="welcome" id="welcome">
 				<div class="welcome-wrap">
 					<h1>kwiaciarnia</h1>
 					<h1>lawenda</h1>
 					<h2>niezwykłe kompozycje na każdą okazję!</h2>
 					<p>zapraszamy!</p>
-					<button class="arrow-down">
-					<i class="fas fa-angle-down"></i>
-					</button>
 				</div>
 			</section>
 		</header>
@@ -48,7 +45,7 @@
 			</div>			
 			<div class="image"></div>			
 		</section>
-		<section class="banner">
+		<section class="banner" id="offer">
 			<div class="arrow arrow-left">
 				<i class="fas fa-angle-left"></i>
 			</div>
@@ -65,7 +62,7 @@
 				<i class="fas fa-angle-right"></i>
 			</div>
 		</section>
-		<section class="gallery">
+		<section class="gallery" id="gallery">
 			<h1>Galeria naszych prac</h1>
 			<div class="album">
 				<div>
@@ -134,7 +131,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="contact">
+		<section class="contact" id="contact">
 			<div class="information">
 				<div class="wrap">
 					<h1>Skontaktuj się z nami!</h1>
@@ -168,6 +165,7 @@
 		<footer>
 			<p>Copyright © 2018 Anna Ambroziak</p>
 		</footer>
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp_xLumNgH5-8TNCttK4sqzDo3yyZ5xUA&callback=initMap"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
