--- a/index.html
+++ b/index.html
@@ -20,22 +20,21 @@
 				<ul>
 					<li class="logo"><a href='#'><img src="images/logo.png" alt="kwiaciarnia lawenda"></a></li>
 					<li><a href="#" class="btn-1">home</a></li>
-					<li><a href="#" class="btn-2">oferta</a></li>
-					<li><a href="#" class="btn-3">galeria</a></li>
-					<li><a href="#" class="btn-4">kontakt</a></li>
+					<li><a href="#" class="btn-2">o nas</a></li>
+					<li><a href="#" class="btn-3">oferta</a></li>
+					<li><a href="#" class="btn-4">galeria</a></li>
+					<li><a href="#" class="btn-5">kontakt</a></li>
 				</ul>
 			</nav>
 		</section>
-		<header>
-			<section class="welcome" id="welcome">
-				<div class="welcome-wrap">
-					<h1>kwiaciarnia</h1>
-					<h1>lawenda</h1>
-					<h2>niezwykłe kompozycje na każdą okazję!</h2>
-					<p>zapraszamy!</p>
-				</div>
-			</section>
-		</header>
+		<section class="welcome" id="welcome">
+			<div class="welcome-wrap">
+				<h1>kwiaciarnia</h1>
+				<h1>lawenda</h1>
+				<h2>niezwykłe kompozycje na każdą okazję!</h2>
+				<p>zapraszamy!</p>
+			</div>
+		</section>		
 		<section class="about-us">
 			<div class="text">
 				<h1>Kwiaty to nasza pasja!</h1>
