--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=La+Belle+Aurore|Roboto:400,700&amp;subset=latin-ext" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="shortcut icon" href="images/logo-flower.png" type="image/png">
 	</head>
 	<body>
 		<section class="navigation">			
