add compositions to gallery

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<a href="#"><img src="images/gallery/1.jpg"></a>
 					<div class="caption">
 						<p>kompozycje kwiatowe</p>
-						<button>Zobacz więcej</button>
+						<a class="btn-gallery" href="gallery/compositions/compositions.html">Zobacz więcej</a>
 					</div>
 				</div>
 				<div>
@@ -78,7 +78,7 @@
 					<a href="#"><img src="images/gallery/2.jpg"></a>
 					<div class="caption">
 						<p>dekoracje weselne</p>
-						<button>Zobacz więcej</button>
+						<a class="btn-gallery" href="gallery/compositions.html">Zobacz więcej</a>
 					</div>
 				</div>
 				<div>
@@ -86,7 +86,7 @@
 					<a href="#"><img src="images/gallery/3.jpg"></a>
 					<div class="caption">
 						<p>dekoracja aut</p>
-						<button>Zobacz więcej</button>
+						<a class="btn-gallery" href="gallery/compositions.html">Zobacz więcej</a>
 					</div>
 				</div>
 				<div>
@@ -94,7 +94,7 @@
 					<a href="#"><img src="images/gallery/4.jpg"></a>
 					<div class="caption">
 						<p>wianki</p>
-						<button>Zobacz więcej</button>
+						<a class="btn-gallery" href="gallery/compositions.html">Zobacz więcej</a>
 					</div>
 				</div>
 				<div>
@@ -102,7 +102,7 @@
 					<a href="#"><img src="images/gallery/5.jpg"></a>
 					<div class="caption">
 						<p>dekoracje świąteczne</p>
-						<button>Zobacz więcej</button>
+						<a class="btn-gallery" href="gallery/compositions.html">Zobacz więcej</a>
 					</div>
 				</div>
 				<div>
@@ -110,7 +110,7 @@
 					<a href="#"><img src="images/gallery/6.jpg"></a>
 					<div class="caption">
 						<p>słodkośći</p>
-						<button>Zobacz więcej</button>
+						<a class="btn-gallery" href="gallery/compositions.html">Zobacz więcej</a>
 					</div>
 				</div>
 				<div>
@@ -118,7 +118,7 @@
 					<a href="#"><img src="images/gallery/7.jpg"></a>
 					<div class="caption">
 						<p>pakowanie prezentów</p>
-						<button>Zobacz więcej</button>
+						<a class="btn-gallery" href="gallery/compositions.html">Zobacz więcej</a>
 					</div>
 				</div>
 				<div>
@@ -126,7 +126,7 @@
 					<a href="#"><img src="images/gallery/8.jpg"></a>
 					<div class="caption">
 						<p>wieńce pogrzebowe</p>
-						<button>Zobacz więcej</button>
+						<a class="btn-gallery" href="gallery/compositions.html">Zobacz więcej</a>
 					</div>
 				</div>
 			</div>
