fix compositions gallery

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="album">
 				<div>
 					<!-- <img src="" alt=""> -->
-					<a href="#"><img src="images/gallery/1.jpg"></a>
+					<a href="gallery/compositions/compositions.html"><img src="images/gallery/1.jpg"></a>
 					<div class="caption">
 						<p>kompozycje kwiatowe</p>
 						<a class="btn-gallery" href="gallery/compositions/compositions.html">Zobacz więcej</a>
