--- a/gallery/compositions/compositions.html
+++ b/gallery/compositions/compositions.html
@@ -8,7 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=La+Belle+Aurore|Roboto:400,700&amp;subset=latin-ext" rel="stylesheet">
 		<link href="../dist/css/lightbox.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="compositions.css">
-		<link rel="shortcut icon" href="../images/logo-flower.png" type="image/png">
+		<link rel="shortcut icon" href="../../images/logo-flower.png" type="image/png">
 	</head>
 	<body>
 		<section class="gallery">
