fix gallery & contact section

--- a/gallery/car-decorations/car-decorations.html
+++ b/gallery/car-decorations/car-decorations.html
@@ -16,7 +16,7 @@
 		</nav>
 		<section class="gallery">
 			<div class="title">
-				<h1>dekoracje świąteczne</h1>
+				<h1>dekoracja aut</h1>
 				<a class="btn" href="../../index.html">Wróć do strony głównej</a>
 			</div>
 			<div class="images">
