change footer text

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			</div>
 		</section>
 		<footer>
-			<p>Copyright © 2018 Anna Ambroziak</p>
+			<p>© Anna Ambroziak 2018 All rights reserved</p>
 		</footer>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp_xLumNgH5-8TNCttK4sqzDo3yyZ5xUA&callback=initMap"></script>
